# graphics-programming-univr

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  learnopengl_chapters.md  new-exercise
src/: main.cpp
src/1.1.1.hello_window/: 1.1.1.hello_window.cpp
src/1.2.2.hello_triangle_indexed/: 1.2.2.hello_triangle_indexed.cpp
src/1.2.3.hello_triangle_exercise1/: 1.2.3.hello_triangle_exercise1.cpp
src/1.2.4.hello_triangle_exercise2/: 1.2.4.hello_triangle_exercise2.cpp
src/1.2.5.hello_triangle_exercise3/: 1.2.5.hello_triangle_exercise3.cpp
src/1.3.1.shaders_uniform/: 1.3.1.shaders_uniform.cpp
src/1.3.3.1.shaders_class_uniform/: 1.3.3.1.shaders_class_uniform.cpp  1.3.3.1.shaders_class_uniform.fs
src/1.3.3.2.shaders_class_upside_down/: 1.3.3.2.shaders_class_upside_down.cpp
src/1.3.3.3.shaders_class_movement/: 1.3.3.3.shaders_class_movement.cpp
src/1.3.3.4.shaders_class_fragment_position/: 1.3.3.4.shaders_class_fragment_position.cpp
src/1.3.3.shaders_class/: 1.3.3.shaders_class.cpp
src/1.4.1.textures/: 1.4.1.textures.cpp
src/1.4.2.1.crate_and_holes/: 1.4.2.1.crate_and_holes.cpp  1.4.2.1.crate_and_holes.fs
src/1.4.2.textures_combined/: 1.4.2.textures_combined.cpp
src/1.4.3.textures_exercise1/: 1.4.3.textures_exercise1.cpp  1.4.3.textures_exercise1.fs
src/1.4.4.textures_exercise2/: 1.4.4.textures_exercise2.cpp  1.4.4.textures_exercise2.fs
src/1.4.6.textures_exercise4/: 1.4.6.textures_exercise4.cpp  1.4.6.textures_exercise4.fs
src/1.5.1.transformations/: 1.5.1.transformations.cpp
src/1.5.2.transformations_exercise2/: 1.5.2.transformations_exercise2.cpp
